feat: Implement admin panel and enhance authentication
- Add admin panel for user and notification management
- Implement admin login functionality
- Update authentication context to manage admin state
- Enhance sidebar with admin navigation
- Add admin-specific translations and UI elements
- Refactor message sending functionality with optimistic updates
- Improve footer component for message input
- Update API documentation to reflect new features

--- a/src/i18n/locales/en.json
+++ b/src/i18n/locales/en.json
@@ -21,6 +21,7 @@
     "settings": "Settings",
     "logOut": "Log out",
     "bulkMessage": "Bulk Message",
+    "adminPanel": "Admin Panel",
     "searchPlaceholder": "Search or start a new chat",
     "noContacts": "No Contacts",
     "importContacts": "You can import Contacts from Google",
@@ -90,7 +91,75 @@
     "loading": "Logging in...",
     "error": "Invalid password. Please try again.",
     "footer": "Built by",
-    "footerLink": "Sait Yaşar"
+    "footerLink": "Sait Yaşar",
+    "adminButton": "Login as Admin"
+  },
+  "admin": {
+    "title": "Admin Panel",
+    "subtitle": "{{appName}} Administration Panel",
+    "welcome": "Welcome",
+    "description": "Welcome to the admin panel. You can manage system settings from here.",
+    "features": "Features",
+    "feature1": "User management",
+    "feature2": "System settings",
+    "feature3": "Reports and statistics",
+    "feature4": "Security settings",
+    "logout": "Logout",
+    "backToList": "Back to List",
+    "statistics": "Statistics",
+    "daily": "Daily",
+    "monthly": "Monthly",
+    "totalMessages": "Total Messages",
+    "avgResponseTime": "Average Response Time",
+    "minutes": "minutes",
+    "notificationManagement": "Notification Management",
+    "notificationType": "Notification Type",
+    "notificationTitle": "Notification Title",
+    "notificationMessage": "Notification Message",
+    "sendToAllUsers": "Send to All Users",
+    "selectUsers": "Select Users",
+    "selectAll": "Select All",
+    "deselectAll": "Deselect All",
+    "sendNotification": "Send Notification",
+    "updateNotification": "Update Notification",
+    "cancel": "Cancel",
+    "sentNotifications": "Sent Notifications",
+    "noNotifications": "No notifications sent yet",
+    "sentToAll": "Sent to all users",
+    "sentToUsers": "Sent to {{count}} users",
+    "typeInfo": "Info",
+    "typeSuccess": "Success",
+    "typeError": "Error",
+    "typeEmergency": "Emergency",
+    "titlePlaceholder": "Enter notification title",
+    "messagePlaceholder": "Enter notification message",
+    "notificationRequired": "Title and message are required",
+    "deleteNotificationConfirm": "Are you sure you want to delete this notification?",
+    "tabStats": "Statistics",
+    "tabNotifications": "Notifications",
+    "tabUsers": "User Management",
+    "tabMessages": "Message Management",
+    "tabPending": "Pending Messages",
+    "userStatistics": "User Statistics",
+    "userName": "User Name",
+    "email": "Email",
+    "messages": "Message Count",
+    "userManagement": "User Management",
+    "assignedLines": "Assigned Lines",
+    "permissions": "Permissions",
+    "actions": "Actions",
+    "permissionViewMessages": "View Messages",
+    "permissionEditMessages": "Edit Messages",
+    "permissionDeleteMessages": "Delete Messages",
+    "save": "Save",
+    "edit": "Edit",
+    "messageManagement": "Message Management",
+    "noMessages": "No messages yet",
+    "status": "Status",
+    "pendingMessages": "Pending Messages",
+    "noPendingMessages": "No pending messages",
+    "hours": "hours",
+    "todayCustomers": "Today's Customers"
   },
   "messageTypes": {
     "selectPlaceholder": "Select message types",
