--- a/src/i18n/locales/tr.json
+++ b/src/i18n/locales/tr.json
@@ -9,23 +9,6 @@
     "description": "Telefonunuzu çevrimiçi tutmadan mesaj gönderin ve alın. WhatsApp'ı aynı anda 4 bağlantılı cihaz ve 1 telefon üzerinde kullanın.",
     "builtBy": "Geliştiren"
   },
-  "sidebar": {
-    "status": "Durum",
-    "newChat": "Yeni sohbet",
-    "menu": "Menü",
-    "newGroup": "Yeni grup",
-    "createRoom": "Oda oluştur",
-    "profile": "Profil",
-    "archived": "Arşivlenmiş",
-    "starred": "Yıldızlı",
-    "settings": "Ayarlar",
-    "logOut": "Çıkış yap",
-    "bulkMessage": "Toplu Mesaj",
-    "searchPlaceholder": "Ara veya yeni bir sohbet başlat",
-    "noContacts": "Kişi Yok",
-    "importContacts": "Google'dan Kişileri içe aktarabilirsiniz",
-    "learnMore": "Daha fazla bilgi edinin."
-  },
   "chatNotes": {
     "title": "Notlar",
     "addNote": "Not Ekle",
@@ -90,7 +73,75 @@
     "loading": "Giriş yapılıyor...",
     "error": "Geçersiz şifre. Lütfen tekrar deneyin.",
     "footer": "Geliştiren",
-    "footerLink": "Sait Yaşar"
+    "footerLink": "Sait Yaşar",
+    "adminButton": "Admin Olarak Giriş Yap"
+  },
+  "admin": {
+    "title": "Admin Paneli",
+    "subtitle": "{{appName}} Yönetim Paneli",
+    "welcome": "Hoş Geldiniz",
+    "description": "Admin paneline hoş geldiniz. Buradan sistem ayarlarını yönetebilirsiniz.",
+    "features": "Özellikler",
+    "feature1": "Kullanıcı yönetimi",
+    "feature2": "Sistem ayarları",
+    "feature3": "Raporlar ve istatistikler",
+    "feature4": "Güvenlik ayarları",
+    "logout": "Çıkış Yap",
+    "backToList": "Listeye Dön",
+    "statistics": "İstatistikler",
+    "daily": "Günlük",
+    "monthly": "Aylık",
+    "totalMessages": "Toplam Mesaj",
+    "avgResponseTime": "Ortalama Cevaplanma Süresi",
+    "minutes": "dakika",
+    "notificationManagement": "Bildirim Yönetimi",
+    "notificationType": "Bildirim Tipi",
+    "notificationTitle": "Bildirim Başlığı",
+    "notificationMessage": "Bildirim Mesajı",
+    "sendToAllUsers": "Tüm Kullanıcılara Gönder",
+    "selectUsers": "Kullanıcı Seç",
+    "selectAll": "Tümünü Seç",
+    "deselectAll": "Seçimi Kaldır",
+    "sendNotification": "Bildirim Gönder",
+    "updateNotification": "Bildirimi Güncelle",
+    "cancel": "İptal",
+    "sentNotifications": "Gönderilen Bildirimler",
+    "noNotifications": "Henüz bildirim gönderilmemiş",
+    "sentToAll": "Tüm kullanıcılara gönderildi",
+    "sentToUsers": "{{count}} kullanıcıya gönderildi",
+    "typeInfo": "Bilgi",
+    "typeSuccess": "Başarılı",
+    "typeError": "Hata",
+    "typeEmergency": "Acil",
+    "titlePlaceholder": "Bildirim başlığını girin",
+    "messagePlaceholder": "Bildirim mesajını girin",
+    "notificationRequired": "Başlık ve mesaj gereklidir",
+    "deleteNotificationConfirm": "Bu bildirimi silmek istediğinizden emin misiniz?",
+    "tabStats": "İstatistikler",
+    "tabNotifications": "Bildirimler",
+    "tabUsers": "Kullanıcı Yönetimi",
+    "tabMessages": "Mesaj Yönetimi",
+    "tabPending": "Bekleyen Mesajlar",
+    "userStatistics": "Kullanıcı İstatistikleri",
+    "userName": "Kullanıcı Adı",
+    "email": "E-posta",
+    "messages": "Mesaj Sayısı",
+    "userManagement": "Kullanıcı Yönetimi",
+    "assignedLines": "Atanan Hatlar",
+    "permissions": "Yetkiler",
+    "actions": "İşlemler",
+    "permissionViewMessages": "Mesajları Görüntüle",
+    "permissionEditMessages": "Mesajları Düzenle",
+    "permissionDeleteMessages": "Mesajları Sil",
+    "save": "Kaydet",
+    "edit": "Düzenle",
+    "messageManagement": "Mesaj Yönetimi",
+    "noMessages": "Henüz mesaj yok",
+    "status": "Durum",
+    "pendingMessages": "Bekleyen Mesajlar",
+    "noPendingMessages": "Bekleyen mesaj yok",
+    "hours": "saat",
+    "todayCustomers": "Bugün Gelen Müşteri Sayısı"
   },
   "messageTypes": {
     "selectPlaceholder": "Mesaj tiplerini seçin",
