feat: Implement Error Boundary component with styled fallback UI
- Add ErrorBoundary component to handle errors in the application
- Create ErrorBoundary.styles.tsx for styling the error fallback UI
- Implement translations for error messages in English and Turkish
- Update routing to include error handling for various routes

--- a/src/i18n/locales/en.json
+++ b/src/i18n/locales/en.json
@@ -192,6 +192,14 @@
     "goHome": "Go to Home",
     "builtBy": "Built by"
   },
+  "error": {
+    "title": "An Error Occurred",
+    "description": "Sorry, an unexpected error occurred. Please reload the page or go back to home.",
+    "chunkError": "An error occurred while loading the page. Please reload the page.",
+    "reload": "Reload Page",
+    "goHome": "Go to Home",
+    "builtBy": "Built by"
+  },
   "bulkMessage": {
     "title": "Send Bulk Message",
     "uploadFile": "Upload Excel/CSV File",
