--- a/src/i18n/locales/tr.json
+++ b/src/i18n/locales/tr.json
@@ -174,6 +174,14 @@
     "goHome": "Ana Sayfaya Dön",
     "builtBy": "Geliştiren"
   },
+  "error": {
+    "title": "Bir Hata Oluştu",
+    "description": "Üzgünüz, beklenmeyen bir hata oluştu. Lütfen sayfayı yenileyin veya ana sayfaya dönün.",
+    "chunkError": "Sayfa yüklenirken bir hata oluştu. Lütfen sayfayı yenileyin.",
+    "reload": "Sayfayı Yenile",
+    "goHome": "Ana Sayfaya Dön",
+    "builtBy": "Geliştiren"
+  },
   "bulkMessage": {
     "title": "Toplu Mesaj Gönder",
     "uploadFile": "Excel/CSV Dosyası Yükle",
